[project]
name = "scollovati-aegis-decrypt"
version = "v0.0.3"
description = "A backup decryptor and OTP generator for the vault of the Aegis Authenticator Android app."
authors = [
    {name = "scollovati"}
]
license = { text = "GPL-3.0-only" }
readme = "README.md"

requires-python = ">=3.13"
keywords = ["otp-generator", "AEGIS", "2FA", "authenticator"]
dependencies = [
    "cryptography>=45.0",
    "docopt>=0.6",
    "pillow>=8.4",
    "pycryptodome>=3.23",
    "pyotp>=2.9",
    "pyqrcode>=1.2"
]


[project.urls]
repository = "https://gitlab.com/scollovati/Aegis-decrypt"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "aegis_decrypt.py"},
    {include = "*", from = "src"}
]

[tool.poetry.group.dev.dependencies]
bandit = ">=1.8"
black = ">=25.1"
pylint = ">=3.3"
pyupgrade = ">=3.20.0"
mypy = "^1.16.1"

[tool.poetry.scripts]
aegis_decrypt = 'aegis_decrypt:main'

[tool.bandit]
exclude_dirs = [".venv", "export", "temp"]

[tool.mypy]
follow_untyped_imports = true

[tool.pylint]
ignore-paths =  [".venv", "export", "temp"]
disable = [
    "line-too-long",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.pylint.format]
max-line-length = "88"

